Update rails 5.0 to 5.1.4

--- a/config/database.yml
+++ b/config/database.yml
@@ -8,9 +8,9 @@ default: &default
 
 development:
   <<: *default
-  database: web_development
+  database: myapp_development
 
 
 test:
   <<: *default
-  database: web_test
+  database: myapp_test
